--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="grille.js"></script>
-    <link rel="stylesheet" href="grille.css">
+    <script src="2048.js"></script>
+    <link rel="stylesheet" href="2048.css">
 </head>
 <body>
 
